--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,4 +1,7 @@
 /* Custom header image positioning */
 #main {
-    background-position: center, 0 center, center -150px !important;
+  background-position:
+    center,
+    0 center,
+    center -150px !important;
 }
