--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "type-on-strap";
-@import "custom";
-@import "glossary";
-@import "glossary-tooltip";
+@import 'type-on-strap';
+@import 'custom';
+@import 'glossary';
+@import 'glossary-tooltip';
