--- a/_sass/glossary.scss
+++ b/_sass/glossary.scss
@@ -19,7 +19,7 @@
   position: relative;
 
   &::before {
-    content: "🔍";
+    content: '🔍';
     position: absolute;
     left: 50%;
     top: 50%;
@@ -38,7 +38,7 @@
     max-width: 400px;
   }
 
-  input[type="text"] {
+  input[type='text'] {
     width: 100%;
     margin: 0 auto;
     display: block;
