--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -160,6 +160,37 @@ body.admin-page {
   }
 }
 
+/* Shared Saga and Stories listing styles */
+.saga-list,
+.stories-list {
+  list-style: none;
+  padding: 0;
+  margin: 0.9rem 0 1.8rem;
+}
+
+.saga-item,
+.stories-item {
+  margin: 0.6rem 0;
+  line-height: 1.4;
+}
+
+.saga-link,
+.stories-link {
+  font-weight: 600;
+  text-decoration: none;
+  font-size: 1.85rem;
+  display: inline-block;
+}
+
+.saga-meta,
+.stories-meta {
+  color: #666;
+  font-size: 0.95rem;
+  margin-left: 0.6rem;
+  display: inline-block;
+  margin-top: 0;
+}
+
 /* For very small screens */
 @media (width <= 480px) {
   :root {
